[package]
name = "HighLevelgRPC"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payments-server"
path = "src/server.rs"

[[bin]]
name = "payments-client"
path = "src/client.rs"

[dependencies]
tonic = "^0.8"
prost = "^0.7"
tokio = {version = "*", features = ["macros","rt-multi-thread"]}

[build-dependencies]
tonic-build = "^0.8"

